added pdf, updated css and vibewar stuff to origin

--- a/css/main.css
+++ b/css/main.css
@@ -440,4 +440,8 @@ text-decoration:none;
     h3 {
         page-break-after: avoid;
     }
+    .footer .btn,
+    .footer .icons {
+        display:none;
+    }
 }
