--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,10 @@ background:#FFF;
 h1, p {
 text-align: center;
 color: #000;
-font-family: "Open Sans", arial, sans-serif;
+font-family: 'clear_sansregular';
+}
+h1 {
+font-family:"Open Sans", arial, sans-serif;
 }
 p.email {
 font-size:1em;
